--- a/header-oldbooksite.html
+++ b/header-oldbooksite.html
@@ -10,7 +10,7 @@
                 <img src='photos/story%203.png' alt='story3' onmouseover='hstory3()' width='13%' >
                 </a>
                 
-            <a href="Index.html"><img src="https://raw.githubusercontent.com/Soz-B/yr13computer/master/home.png" class='logo' alt="Fairy Tales - Home" title="Home" width="7%"></a>
+            <a href="Index.html"><img src="photos/home.png" class='logo' alt="Fairy Tales - Home" title="Home" width="7%"></a>
                 
             <a href="story4.html" id="story04">
                 <img src='photos/story%204.png' alt='story4' onmouseover='hstory4()' width='13%' >
