--- a/header-oldbooksite.html
+++ b/header-oldbooksite.html
@@ -22,4 +22,5 @@
                 <img src='photos/reference.png' alt='references' onmouseover='hreference()' width='13%' >
                 </a>
         </nav>
-        </header>
+</header>
+<a name="top"></a>
