--- a/header-oldbooksite.html
+++ b/header-oldbooksite.html
@@ -1,3 +1,24 @@
+        <div class="menu" id="menu">
+            <span class="menu-circle"></span>
+            <a href="#" onclick="MenuTog()" class="menu-link">
+                <span class="menu-icon">
+                    <span class="menu-line menu-line-1"></span>
+                    <span class="menu-line menu-line-2"></span>
+                    <span class="menu-line menu-line-3"></span>
+                </span>
+            </a>
+        </div>
+        
+        <div class="menu-underlay" id="menu-underlay"></div>
+            <div class="menu-overlay" id="menu-overlay">
+                <nav class="menu-nav">
+                    <a href="story1.html" id="mstory01">
+                    <img src='photos/story%201.png' alt='story1' onmouseover='mstory1()' width='25%' ></a>
+                    <br><a href="story2.html" id="mstory02"><img src='photos/story%202.png' alt='story2' onmouseover='mstory2()' width='25%' ></a><a href="story3.html" id="mstory03"><img src='photos/story%203.png' alt='story3' onmouseover='mstory3()' width='25%' ></a>
+                    <br><a href="story4.html" id="mstory04"><img src='photos/story%204.png' alt='story4' onmouseover='mstory4()' width='25%' ></a><a href="madlib.html" id="mmadlib01"><img src='photos/madlib.png' alt='madlib' onmouseover='mmadlib()' width='25%' ></a>
+                    <br><a href="references.html" id="mreference01"><img src='photos/reference.png' alt='references' onmouseover='mreference()' width='25%' ></a>
+                </nav>
+            </div>
 <a name="top" style="visibility: hidden">.</a>
 <header>
             <nav>
