--- a/header-oldbooksite.html
+++ b/header-oldbooksite.html
@@ -9,7 +9,7 @@
             </a>
         </div>
         
-        <div class="menu-underlay" id="menu-underlay"></div>
+        <div class="menu-underlay" id="menu-underlay" onclick="MenuTog()"></div>
             <div class="menu-overlay" id="menu-overlay">
                 <nav class="menu-nav">
                     <a href="story1.html" id="mstory01">
