--- a/footer-oldbooksite.html
+++ b/footer-oldbooksite.html
@@ -8,7 +8,7 @@
             </div>
             <div class="footright">
                 <nav>
-                    <a href=""><img src="photos/home.png" width="20%"></a><a href="#top"><img src="photos/Back%20to%20top.png" width="20%"></a>
+                    <a href="Index.html"><img src="photos/home.png" width="20%"></a><a href="#top"><img src="photos/Back%20to%20top.png" width="20%"></a>
                 </nav>
             </div>
         </footer>
