--- a/footer-oldbooksite.html
+++ b/footer-oldbooksite.html
@@ -1,4 +1,4 @@
-<div class="footr">
+<footer>
             <div class="footleft">
                 <nav>
                     <a href="story1.html" id="fstory01">
@@ -11,4 +11,4 @@
                     <a href="Index.html"><img src="photos/home.png" width="20%"></a><a href="#top"><img src="photos/Back%20to%20top.png" width="20%"></a>
                 </nav>
             </div>
-        </div>
+        </footer>
