--- a/header-oldbooksite.html
+++ b/header-oldbooksite.html
@@ -1,6 +1,6 @@
         <div class="menu" id="menu">
             <span class="menu-circle"></span>
-            <a href="#" onclick="MenuTog()" class="menu-link">
+            <a href="#/" onclick="MenuTog()" class="menu-link">
                 <span class="menu-icon">
                     <span class="menu-line menu-line-1"></span>
                     <span class="menu-line menu-line-2"></span>
