--- a/footer-oldbooksite.html
+++ b/footer-oldbooksite.html
@@ -2,13 +2,13 @@
      <div class="footleft">
          <nav>
             <a href="story1.html" id="fstory01">
-            <img src='photos/story%201.png' alt='story1' onmouseover='fstory1()' width='13%' ></a><a href="story2.html" id="fstory02"><img src='photos/story%202.png' alt='story2' onmouseover='fstory2()' width='13%' ></a><a href="story3.html" id="fstory03"><img src='photos/story%203.png' alt='story3' onmouseover='fstory3()' width='13%' ></a>
-            <br><a href="story4.html" id="fstory04"><img src='photos/story%204.png' alt='story4' onmouseover='fstory4()' width='13%' ></a><a href="madlib.html" id="fmadlib01"><img src='photos/madlib.png' alt='madlib' onmouseover='fmadlib()' width='13%' ></a><a href="references.html" id="freference01"><img src='photos/reference.png' alt='references' onmouseover='freference()' width='13%' ></a>
+            <img src='photos/story%201.png' alt='story 1 link' onmouseover='fstory1()' width='13%' ></a><a href="story2.html" id="fstory02"><img src='photos/story%202.png' alt='story 2 link' onmouseover='fstory2()' width='13%' ></a><a href="story3.html" id="fstory03"><img src='photos/story%203.png' alt='story 3 link' onmouseover='fstory3()' width='13%' ></a>
+            <br><a href="story4.html" id="fstory04"><img src='photos/story%204.png' alt='story 4 link' onmouseover='fstory4()' width='13%' ></a><a href="madlib.html" id="fmadlib01"><img src='photos/madlib.png' alt='madlib link' onmouseover='fmadlib()' width='13%' ></a><a href="references.html" id="freference01"><img src='photos/reference.png' alt='references link' onmouseover='freference()' width='13%' ></a>
          </nav>
      </div>
      <div class="footright">
          <nav>
-            <a href="Index.html"><img src="photos/home.png" width="20%"></a><a href="#top"><img src="photos/Back%20to%20top.png" width="20%"></a>
+            <a href="Index.html"><img src="photos/home.png" width="20%" alt="home link"></a><a href="#top"><img src="photos/Back%20to%20top.png" width="20%" alt="Jump to top of page"></a>
          </nav>
      </div>
  </div>
