--- a/header-oldbooksite.html
+++ b/header-oldbooksite.html
@@ -14,34 +14,34 @@
                 <nav class="menu-nav">
                     <a href="story1.html" id="mstory01">
                     <img src='photos/story%201.png' alt='story1' onmouseover='mstory1()' width='25%' ></a>
-                    <br><a href="story2.html" id="mstory02"><img src='photos/story%202.png' alt='story2' onmouseover='mstory2()' width='25%' ></a><a href="story3.html" id="mstory03"><img src='photos/story%203.png' alt='story3' onmouseover='mstory3()' width='25%' ></a>
-                    <br><a href="story4.html" id="mstory04"><img src='photos/story%204.png' alt='story4' onmouseover='mstory4()' width='25%' ></a><a href="madlib.html" id="mmadlib01"><img src='photos/madlib.png' alt='madlib' onmouseover='mmadlib()' width='25%' ></a>
-                    <br><a href="references.html" id="mreference01"><img src='photos/reference.png' alt='references' onmouseover='mreference()' width='25%' ></a>
+                    <br><a href="story2.html" id="mstory02"><img src='photos/story%202.png' alt='story 2 link' onmouseover='mstory2()' width='25%' ></a><a href="story3.html" id="mstory03"><img src='photos/story%203.png' alt='story 3 link' onmouseover='mstory3()' width='25%' ></a>
+                    <br><a href="story4.html" id="mstory04"><img src='photos/story%204.png' alt='story 4 link' onmouseover='mstory4()' width='25%' ></a><a href="madlib.html" id="mmadlib01"><img src='photos/madlib.png' alt='madlib link' onmouseover='mmadlib()' width='25%' ></a>
+                    <br><a href="references.html" id="mreference01"><img src='photos/reference.png' alt='references link' onmouseover='mreference()' width='25%' ></a>
                 </nav>
             </div>
 <a name="top" style="visibility: hidden">.</a>
 <header>
             <nav>
                 <a href="story1.html" id="story01">
-                <img src='photos/story%201.png' alt='story1' onmouseover='hstory1()' width='13%' >
+                <img src='photos/story%201.png' alt='story 1 link' onmouseover='hstory1()' width='13%' >
                 </a>
                 <a href="story2.html" id="story02">
-                <img src='photos/story%202.png' alt='story2' onmouseover='hstory2()' width='13%' >
+                <img src='photos/story%202.png' alt='story 2 link' onmouseover='hstory2()' width='13%' >
                 </a>
                 <a href="story3.html" id="story03">
-                <img src='photos/story%203.png' alt='story3' onmouseover='hstory3()' width='13%' >
+                <img src='photos/story%203.png' alt='story 3 link' onmouseover='hstory3()' width='13%' >
                 </a>
                 
-            <a href="Index.html"><img src="photos/home.png" class='logo' alt="Fairy Tales - Home" title="Home" width="7%"></a>
+            <a href="Index.html"><img src="photos/home.png" class='logo' alt="Fairy Tales - Home link" title="Home" width="7%"></a>
                 
             <a href="story4.html" id="story04">
-                <img src='photos/story%204.png' alt='story4' onmouseover='hstory4()' width='13%' >
+                <img src='photos/story%204.png' alt='story 4 link' onmouseover='hstory4()' width='13%' >
                 </a>
                 <a href="madlib.html" id="madlib01">
-                <img src='photos/madlib.png' alt='madlib' onmouseover='hmadlib()' width='13%' >
+                <img src='photos/madlib.png' alt='madlib link' onmouseover='hmadlib()' width='13%' >
                 </a>
                 <a href="references.html" id="reference01">
-                <img src='photos/reference.png' alt='references' onmouseover='hreference()' width='13%' >
+                <img src='photos/reference.png' alt='references link' onmouseover='hreference()' width='13%' >
                 </a>
         </nav>
 </header>
